# amazon-reviews-databricks

./: Train_and_deploy_models.py  Train_and_deploy_models_with_uc.py  conda.yaml  pyproject.toml
amazon_reviews/data_loader/: data_loader.py
