[tool.poetry]
name = "amazon_reviews"
version = "0.0.1"
description = "Databricks serverless API deployment: Amazon reviews public dataset"
authors = ["John Smith <john@example.com>"]
readme = "README.md"
packages = [{include = "amazon_reviews"}]

[tool.poetry.dependencies]
python = "^3.6"
mlflow = "2.14.0"
nltk = "3.8.1"
pyspark = "3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
